# Marathon-Shell

./: .gitignore  .gitmodules  .qmllint.ini  .qmllsrc  APKBUILD  APPS_MIGRATION_COMPLETE.md  APP_LAUNCH_AUDIT.md  APP_SYSTEM_ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  BB10_FEATURES.md  BB10_IMPLEMENTATION.md  BUILD_PROCESS_QT64.md  CMakeLists.txt  CONSTRAINTS_GUIDE.md  CONTRIBUTING.md  CRITICAL_FIXES_NEEDED.md  DBUS_IMPLEMENTATION_STATUS.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_READY.md  DEVICE_FIXES_SUMMARY.md  DEVICE_ISSUES_RESOLVED.md  KERNEL_REQUIREMENT.md  LICENSE  MARION_IMPLEMENTATION.md  PERFORMANCE_ANALYSIS.md  QML_CODE_QUALITY_AUDIT.md  QS_ANALYSIS.md  README.md  RESPONSIVE_DESIGN_REFACTOR.md  TECHNICAL_DEBT_AUDIT.md  TROUBLESHOOTING.md  VERIFICATION_COMPLETE.md  WAYLAND_INTEGRATION.md  check-services.sh  check_output.cpp  marathon-config-oneplus6.json  marathon-config.json  marathon-shell-session  marathon-shell.toml  marathon.desktop  (+4 more)
apps/: CMakeLists.txt
apps/browser/: BrowserApp.qml  CMakeLists.txt  manifest.json  qmldir
apps/browser/components/: BrowserDrawer.qml  TabCard.qml  WebView.qml
apps/browser/pages/: BookmarksPage.qml  BrowserSettingsPage.qml  HistoryPage.qml  HomepagePage.qml  SearchEnginePage.qml  TabsPage.qml
apps/calculator/: CMakeLists.txt  CalculatorApp.qml  manifest.json
apps/calendar/: CMakeLists.txt  CalendarApp.qml  manifest.json  qmldir
apps/calendar/pages/: CalendarGridPage.qml  EventListPage.qml
apps/camera/: CMakeLists.txt  CameraApp.qml  manifest.json  qmldir
apps/clock/: CMakeLists.txt  ClockApp.qml  manifest.json  qmldir
apps/clock/components/: AddCityDialog.qml  AlarmItem.qml  ClockIcon.qml
apps/clock/pages/: AlarmEditorDialog.qml  AlarmPage.qml  ClockPage.qml  StopwatchPage.qml  TimerPage.qml  WorldClockPage.qml
apps/gallery/: CMakeLists.txt  GalleryApp.qml  manifest.json  qmldir
apps/gallery/pages/: PhotoViewerPage.qml
apps/maps/: CMakeLists.txt  MapsApp.qml  manifest.json  qmldir
apps/messages/: CMakeLists.txt  MessagesApp.qml  manifest.json  qmldir
apps/messages/components/: ConversationListItem.qml  DateSeparator.qml  MessageBubble.qml  MessageInputBar.qml
apps/messages/pages/: ChatPage.qml  ConversationsListPage.qml  NewConversationPage.qml
apps/music/: CMakeLists.txt  MusicApp.qml  manifest.json  qmldir
apps/notes/: CMakeLists.txt  NotesApp.qml  manifest.json  qmldir
apps/notes/components/: NoteItem.qml
apps/notes/pages/: NoteEditorPage.qml  NotesListPage.qml
apps/phone/: CMakeLists.txt  PhoneApp.qml  manifest.json  qmldir
apps/phone/pages/: ActiveCallPage.qml  CallHistoryPage.qml  ContactEditorPage.qml  ContactsPage.qml  DialerPage.qml  IncomingCallScreen.qml
apps/settings/: CMakeLists.txt  SettingsApp.qml  manifest.json
apps/settings/components/: BluetoothPairDialog.qml  SettingsPageTemplate.qml  WiFiPasswordDialog.qml
apps/settings/pages/: AboutPage.qml  AboutPageNew.qml  AppManagerPage.qml  AppSortPage.qml  BluetoothPage.qml  CellularPage.qml  CellularPage.qml.bak  DefaultAppsPage.qml  (+16 more)
apps/store/: CMakeLists.txt  StoreApp.qml  manifest.json  qmldir
apps/template/: .do-not-install  CMakeLists.txt  README.md  TemplateApp.qml  manifest.json  qmldir
apps/terminal/: CMakeLists.txt  README.md  TerminalApp.qml  manifest.json
apps/test/: CMakeLists.txt  TestApp.qml  manifest.json  qmldir
marathon-core/: CMakeLists.txt  README.md
marathon-core/src/: marathonappinstaller.cpp  marathonappinstaller.h  marathonapppackager.cpp  marathonappregistry.h  marathonappscanner.cpp  marathonappscanner.h  marathonappverifier.h
marathon-keyboard/: CMakeLists.txt  README.md
marathon-keyboard/src/: marathoninputmethodengine.h  marathonkeyboardime.h
marathon-ui/: CMakeLists.txt
marathon-ui/Containers/: .qmlls.ini  CMakeLists.txt  MApp.qml  MCard.qml  MFormCard.qml  MFormField.qml  MLayer.qml  MListItem.qml  MListTile.qml  MPage.qml  MPanel.qml  MPullToRefresh.qml  MScrollView.qml  MSectionHeader.qml  MSettingsListItem.qml  MSwipeDelegate.qml
marathon-ui/Controls/: CMakeLists.txt  MCheckbox.qml  MComboBox.qml  MDropdown.qml  MRadioButton.qml  MRadioGroup.qml  MSlider.qml  MToggle.qml  qmldir
marathon-ui/Core/: CMakeLists.txt  Icon.qml  MBreakpoints.qml  MButton.qml  MCircularIconButton.qml  MDateTimePicker.qml  MEmptyState.qml  MGrid.qml  MIconButton.qml  MLabel.qml  MResponsive.qml  MTextArea.qml  MTextInput.qml
marathon-ui/Effects/: CMakeLists.txt  qmldir
marathon-ui/Feedback/: CMakeLists.txt  MBadge.qml  qmldir
marathon-ui/Lists/: CMakeLists.txt  qmldir
marathon-ui/Modals/: CMakeLists.txt  MConfirmDialog.qml  MModal.qml  MSheet.qml
marathon-ui/Navigation/: .qmlls.ini  CMakeLists.txt  MActionBar.qml  MBottomBar.qml  MNavigationPane.qml  MPageIndicator.qml  MTabBar.qml  MTopBar.qml  qmldir
marathon-ui/Theme/: CMakeLists.txt  MColors.qml  MMotion.qml  MRadius.qml  MSpacing.qml  MTypography.qml  qmldir
shell/: .qmllint.ini  .qmlls.ini  CMakeLists.txt  main.cpp  resources.qrc  resources.qrc.bak
shell/protocols/: README.md
shell/qml/: Main.qml  MarathonShell.qml  qmldir
shell/src/: appmodel.cpp  appmodel.h  audiomanagercpp.cpp  audiomanagercpp.h  audiomanagercpp_new.cpp  audioroutingmanager.cpp  audioroutingmanager.h  bluetoothagent.cpp  bluetoothagent.h  bluetoothmanager.cpp  bluetoothmanager.h  callhistorymanager.cpp  callhistorymanager.h  configmanager.cpp  configmanager.h  contactsmanager.cpp  contactsmanager.h  crashhandler.cpp  crashhandler.h  desktopfileparser.cpp  desktopfileparser.h  displaymanagercpp.cpp  displaymanagercpp.h  hapticmanager.cpp  hapticmanager.h  locationmanager.cpp  locationmanager.h  marathonappinstaller.cpp  marathonappinstaller.h  marathonapploader.cpp  marathonapploader.h  marathonapppackager.h  marathonappprocess.cpp  marathonappprocess.h  marathonappregistry.cpp  marathonappregistry.h  marathonappscanner.cpp  marathonappscanner.h  marathonappstoreservice.cpp  marathonappstoreservice.h  (+52 more)
tests/: CMakeLists.txt  README.md  test_apppackager.cpp  test_appverifier.cpp  test_permissionmanager.cpp
tools/marathon-dev/: CMakeLists.txt  main.cpp
(+394 files in other folders)
